// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`QuotationIdParamDto invalid response for id not a allowed value 1 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "matches": "id must match /^[0-9]{12}$/ regular expression",
    },
    "property": "id",
    "value": "1",
  },
]
`;

exports[`QuotationIdParamDto invalid response for missing id 1`] = `
[
  ValidationError {
    "children": [],
    "constraints": {
      "isString": "id must be a string",
      "matches": "id must match /^[0-9]{12}$/ regular expression",
    },
    "property": "id",
    "value": undefined,
  },
]
`;
